# benchb0t

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  benchb0t.db  benchb0t.db-shm  benchb0t.db-wal  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
framework/: anomalies.py  api.py  artifacts.py  cli.py  config.py  container.py  dashboard.py  dashboard_assistant.py  dashboard_checks.py  dashboard_compare.py  dashboard_context.py  dashboard_history.py  dashboard_models.py  dashboard_replay.py  dashboard_state.py  dashboard_stream.py  recorder.py  runner.py  scorer.py  store.py  types.py  utils.py
framework/templates/: analytics.html  builder.html  dashboard.html  history.html  shared-artifacts.css  shared-pm.css  shared-theme.css  shared-utils.js
harnesses/: hermes.yaml  oc-nano.yaml  slavko.yaml
levels/: l-tatto-studio.yaml  l1-single-file.yaml  l10-bella-italia.yaml  l11-micro-saas.yaml  l12-realtime-devops.yaml  l13-schreinerei-vogel.yaml  l2-multi-step.yaml  l3-api-call.yaml  l4-express-api.yaml  l5-data-pipeline.yaml  l6-react-dashboard.yaml  l7-canvas-game.yaml  l8-fullstack-notes.yaml  l9-tattoo-studio.yaml  l99-test.yaml
scripts/: pre-commit-hook.sh  precommit-clean.py
tests/: conftest.py  test_anomalies.py  test_api_module.py  test_artifacts.py  test_artifacts_more.py  test_cli.py  test_config.py  test_container.py  test_dashboard_api.py  test_dashboard_assistant.py  test_dashboard_assistant_tools.py  test_dashboard_chat_stream.py  test_dashboard_checks.py  test_dashboard_compare.py  test_dashboard_context.py  test_dashboard_history.py  test_dashboard_replay.py  test_dashboard_state.py  test_dashboard_stream.py  test_runner.py  test_runner_loop.py  test_scorer.py  test_store_more.py
