[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "benchb0t"
version = "0.1.0"
description = "Videogame-style LLM agent benchmark framework — container-isolated levels, multi-dimensional scoring."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "benchmark", "agents", "evaluation", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docker>=7.0",
    "openai>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",       # used transitively by openai SDK
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
benchbot = "framework.cli:main"

[project.urls]
Homepage       = "https://github.com/benchb0t/benchb0t"
Documentation  = "https://github.com/benchb0t/benchb0t#readme"
"Bug Tracker"  = "https://github.com/benchb0t/benchb0t/issues"

# ── Tool configuration ───────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*"]

[tool.setuptools.package-data]
"framework" = ["templates/*.html", "static/*.js", "static/*.css"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]   # long lines tolerated in embedded templates (pre-split)

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
warn_unused_ignores    = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
timeout      = 30
